fdo#46707: Don't bother with synonyms for text with mixed script types.

Change-Id: I7922905523406d05f864b10e1ecfd27f3fb5f9d6
(cherry picked from commit 49341001e76389f11bf67d756f4742275bc9dcd9)